fix for fdo#53229, import group shapes position and size correctly

Change-Id: Ie513b4a6351a2c6458eeca208faf7ba5bbb9fcce